--- a/index.html
+++ b/index.html
@@ -12,13 +12,15 @@
   </head>
   <body>
     <div id="mapWrapper">
-      <div id="map">
-        <img src="http://img1.loadtr.com/k-483417-Map_of_the_World.gif"/>
-        <div class="planets">
-          <img class="planet" style="top:50px;left:50px;" src="images/apocalypsis/aride_fg3.jpg"/>
-          <img class="planet" style="top:300px;left:50px;" src="images/apocalypsis/glaciaire_fg1.jpg"/>
-          <img class="planet" style="top:50px;left:300px;" src="images/apocalypsis/luxuriante_fg2.jpg"/>
-          <img class="planet" style="top:300px;left:300px;" src="images/apocalypsis/desertique_fg2.jpg"/>
+      <div class="mapRoot">
+        <div id="map">
+          <img src="images/apocalypsis/debuggrid.png"/>
+          <div class="planets">
+            <img class="planet" style="top:50px;left:50px;" src="images/apocalypsis/aride_fg3.jpg"/>
+            <img class="planet" style="top:300px;left:50px;" src="images/apocalypsis/glaciaire_fg1.jpg"/>
+            <img class="planet" style="top:50px;left:300px;" src="images/apocalypsis/luxuriante_fg2.jpg"/>
+            <img class="planet" style="top:300px;left:300px;" src="images/apocalypsis/desertique_fg2.jpg"/>
+          </div>
         </div>
       </div>
     </div>
