--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
   </head>
   <body>
     <div id="mapWrapper">
-      <div class="mapRoot">
-        <div id="map">
-          <img src="images/apocalypsis/debuggrid.png"/>
+      <div id="map">
+        <div class="mapRoot" style="width:1202px;height:700px;">      
+          <div>
+            <img src="images/apocalypsis/debuggrid.png"/>
+          </div>
           <div class="planets">
             <img class="planet" style="top:50px;left:50px;" src="images/apocalypsis/aride_fg3.jpg"/>
             <img class="planet" style="top:300px;left:50px;" src="images/apocalypsis/glaciaire_fg1.jpg"/>
