--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <script src="client/init.js"></script>
   </head>
   <body>
-    <div id="mapWrapper">
+    <div id="viewport">
+      <img id="crosshairs" src="http://dl.dropbox.com/u/107346/share/crosshairs.png" alt="" />
       <div id="map">
         <div class="mapRoot" style="width:1202px;height:700px;">      
           <div>
