--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
           </div>
         </div>
       </div>
-      <div id="zoom_wrapper">
-          <div id="zoom"></div>
+      <div id="tools_wrapper">
+          <div class="zoom"></div>
       </div>      
     </div>
   </body>
