séparation vue controller

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="js/jquery-1.8.3.js"></script>
     <script src="js/jquery-ui-1.9.2.custom.js"></script>
     <script src="js/jquery.mousewheel.min.js"></script>
+    <script src="client/map.ui.js"></script>
     <script src="client/map.js"></script>
     <script src="client/init.js"></script>
   </head>
