--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="js/jquery-1.8.3.js"></script>
     <script src="js/jquery-ui-1.9.2.custom.js"></script>
     <script src="js/jquery.mousewheel.min.js"></script>
+    <script src="client/entity.spaceelement.js"></script>
     <script src="client/entity.planet.js"></script>
     <script src="client/entity.system.js"></script>
     <script src="client/map.ajax.proxy.js"></script>
