painting done for coords

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
   </head>
   <body>
     <div id="viewport">
-      <img id="crosshairs" src="http://dl.dropbox.com/u/107346/share/crosshairs.png" alt="" />
+      <img id="crosshairs" src="images/apocalypsis/crosshairs.png" alt="" />
       <div id="map">
-        <div class="mapRoot zoomOnPlanet" style="width:1114px;height:836px;">      
+        <div class="mapRoot zoomOnPlanet" style="width:1200px;height:700px;">      
           <div>
             <img src="images/apocalypsis/debuggrid.png"/>
           </div>
-          <div class="system" id="2_15_7">
+          <!--div class="system" id="2_15_7">
             <img class="systemPoint nozoom" style="top:50px;left:50px;" src="images/apocalypsis/systeme.jpg"/>
             <img class="sun nozoom" style="top:200px;left:200px;" src="images/apocalypsis/soleil7.jpg"/>
             <div class="coords" id="2_15_7_1">
@@ -36,7 +36,7 @@
               </div>
             </div>
 
-          </div>
+          </div-->
         </div>
       </div>
       <div id="tools_wrapper">
