correction zoom (TEST)

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
             </div>
 
           </div-->
+          <img id="target" src="images/apocalypsis/target.png" alt="" />
         </div>
       </div>
       <div id="tools_wrapper">
