--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </div>
 
           </div-->
-          <img id="target" src="images/apocalypsis/target.png" alt="" />
+          <img id="target" class="nozoom" src="images/apocalypsis/target.png" alt="" />
         </div>
       </div>
       <div id="tools_wrapper">
