zoom on systeme

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     <div id="viewport">
       <img id="crosshairs" src="images/apocalypsis/crosshairs.png" alt="" />
       <div id="map">
-        <div class="mapRoot zoomOnPlanet" style="width:1200px;height:700px;">      
+        <div class="mapRoot" style="width:1200px;height:700px;">      
           <div >
-            <img src="images/apocalypsis/debuggrid.png" style="width:1200px;height:700px;"/>
+            <img src="images/apocalypsis/debuggrid.png" style="width:2400px;height:1400px;"/>
           </div>
           <!--div class="system" id="2_15_7">
             <img class="systemPoint nozoom" style="top:50px;left:50px;" src="images/apocalypsis/systeme.jpg"/>
