--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="js/jquery-1.8.3.js"></script>
     <script src="js/jquery-ui-1.9.2.custom.js"></script>
     <script src="js/jquery.mousewheel.min.js"></script>
+    <script src="client/widget.drawing.js"></script>
     <script src="client/entity.spaceelement.js"></script>
     <script src="client/entity.planet.js"></script>
     <script src="client/entity.system.js"></script>
@@ -23,6 +24,7 @@
           <div >
             <img src="images/apocalypsis/debuggrid.png" style="width:2400px;height:1400px;"/>
           </div>
+          <div id="lines"> </div>
           <!--div class="system" id="2_15_7">
             <img class="systemPoint nozoom" style="top:50px;left:50px;" src="images/apocalypsis/systeme.jpg"/>
             <img class="sun nozoom" style="top:200px;left:200px;" src="images/apocalypsis/soleil7.jpg"/>
