--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <svg xmlns="http://www.w3.org/2000/svg" version="1.1" style="position:absolute;" width="2400" height="1400" id="svgRoot">
             <defs>
               <filter id="blur" filterUnits="userSpaceOnUse" x="0" y="0" >
-                <feGaussianBlur in="SourceAlpha" stdDeviation="3" result="blur"/>
+                <feGaussianBlur in="SourceGraphic" stdDeviation="1" />
               </filter>
             </defs> 
             <g filter="url(#blur)" id="stars">                 
