--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="client/entity.spaceelement.js"></script>
     <script src="client/entity.planet.js"></script>
     <script src="client/entity.system.js"></script>
+    <script src="client/entity.fleet.js"></script>
     <script src="client/map.ajax.proxy.js"></script>
     <script src="client/map.ui.js"></script>
     <script src="client/map.js"></script>
