--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
             </g>
             <g id="lines"> 
             </g> 
+            <g id="fleets"> 
+            </g>             
           </svg>   
           
           <img id="target" class="nozoom" src="images/apocalypsis/target.png" alt="" />
