--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
       </div>
       <div id="tools_wrapper">
           <div class="zoom"></div>
+          <input class="zoom_hidden" name="zoom_hidden" value="1" type="hidden"/>
       </div>      
     </div>
   </body>
