--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
   <head>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
     <link href="css/dot-luv/jquery-ui-1.9.2.custom.css" rel="stylesheet"/>
+    <link rel="stylesheet" href="js/colorbox/colorbox.css" />    
+    <link href="http://www.apocalypsis.org/definitive.css?v=6" rel="stylesheet"/>
     <link href="css/map.css" rel="stylesheet"/>
+    
     <script src="js/jquery-1.8.3.js"></script>
     <script src="js/jquery-ui-1.9.2.custom.js"></script>
     <script src="js/jquery.mousewheel.min.js"></script>
+    <script src="js/colorbox/jquery.colorbox-min.js"></script>     
     <script src="client/widget.drawing.js"></script>
     <script src="client/entity.spaceelement.js"></script>
     <script src="client/entity.planet.js"></script>
@@ -42,7 +46,7 @@
       <div id="tools_wrapper">
           <div class="zoom"></div>
           <input class="zoom_hidden" name="zoom_hidden" value="1" type="hidden"/>
-      </div>      
+      </div> 
     </div>
   </body>
 </html>
