--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <script src="client/entity.fleet.js"></script>
     <script src="client/map.ajax.proxy.js"></script>
     <script src="client/map.ui.js"></script>
+    <script src="client/infobox.ui.js"></script>
     <script src="client/map.js"></script>
     <script src="client/init.js"></script>
   </head>
