WIP master scroller

--- a/index.html
+++ b/index.html
@@ -63,18 +63,13 @@
 
 		// Settings
 	
-    // TODO : ajuster la taille    
-		var contentWidth = 2000;
-		var contentHeight = 2000;
-		var cellWidth = 100;
-		var cellHeight = 100;
-
+    // TODO : ajuster la taille sur sector/cap/absoluteGrid/width|height
+		var contentWidth = 100;
+		var contentHeight = 100;
+    
 		// Initialize layout
 		var container = document.getElementById("viewport");
 		var content = document.getElementById("map");
-
-		//content.style.width = contentWidth + "px";
-		//content.style.height = contentHeight + "px";
 
 	</script>
 	
