Chargement des options en json

--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
     <script src="client/entity.system.js"></script>
     <script src="client/entity.fleet.js"></script>
     <script src="client/map.ajax.proxy.js"></script>
-    <script src="client/map.ui.js"></script>
+    <script src="client/map.ui.js"></script>    
+    <script src="client/options.js"></script>     
     <script src="client/infobox.ui.js"></script>
     <script src="client/map.js"></script>    
     <script src="client/init.js"></script>
