--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 		<script src="js/three/three.min.js"></script>
 		<script src="js/three/renderers/Projector.js"></script>
 		<script src="js/three/renderers/CanvasRenderer.js"></script>
-		<script src="js/three/Detector.js"></script>    
+		<script src="js/three/Detector.js"></script>   
+    <script src="js/three/libs/stats.js"></script> 
     
     <script src="client/drawing.flux.js"></script>
     <script src="client/drawing.widget.js"></script>    
@@ -44,21 +45,7 @@
     <div id="viewport">
       <img id="crosshairs" src="images/apocalypsis/crosshairs.png" alt=""/>
       <div id="map">     
-        <div class="mapRoot" style="width:1200px;height:700px;">      
-          <svg xmlns="http://www.w3.org/2000/svg" version="1.1" style="position:absolute;" width="2400" height="1400" id="svgRoot">
-            <defs>
-              <filter id="blur" filterUnits="userSpaceOnUse" x="0" y="0" >
-                <feGaussianBlur in="SourceGraphic" stdDeviation="0.5" />
-              </filter>
-            </defs> 
-            <g filter="url(#blur)" id="stars">                 
-            </g>
-            <g id="lines"> 
-            </g> 
-            <g id="fleets"> 
-            </g>             
-          </svg>   
-          
+        <div class="mapRoot" style="width:1200px;height:700px;">                
           <div id="containerThree"></div>
           <img id="target" class="nozoom" src="images/apocalypsis/target.png" alt="" />
         </div>
