--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta http-equiv="Content-Language" content="fr" /> 
+    <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
     <link href="css/dot-luv/jquery-ui-1.9.2.custom.css" rel="stylesheet"/>
     <link rel="stylesheet" href="js/colorbox/colorbox.css" />    
